# Graphics-Playground

./: .gitignore
Line_Rasterization/: CMakeLists.txt  main.cpp
Line_Rasterization/assets/shaders/: simple.frag  simple.vert
Line_Rasterization/include/: line_rasterization.h
Line_Rasterization/src/: line_rasterization.cpp
Triangle_Rasterization/: CMakeLists.txt  main.cpp
Triangle_Rasterization/include/: triangle_rasterization.h
Triangle_Rasterization/src/: triangle_rasterization.cpp
